[tool.poetry]
name = "reverse-ssh-report"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "reverse_ssh_report"}]

[tool.poetry.dependencies]
python = "^3.10"
telepot = "^12.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"